--- a/style.css
+++ b/style.css
@@ -73,6 +73,24 @@ body {
   padding-left: 5%;
   background-color: var(--primary-light);
   text-decoration-color: var(--secondary-light);
+  min-height: 100vh;
+  font-size: 100%;
+  line-height: 1.5;
+  text-rendering: optimizeSpeed;
+  overflow-x: hidden;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+}
+
+/* Inherit fonts for inputs and buttons */
+input,
+button,
+textarea,
+select {
+  font: inherit;
 }
 
 header .container {
@@ -82,10 +100,41 @@ header .container {
   font-size: 5rem;
 }
 
+nav ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 10;
+  padding: 3;
+  list-style: none;
+}
+
+nav ul a {
+  display: inline-grid;
+  padding: 0.5rem;
+  color: var(--color-secondary);
+  font-size: 2rem;
+  text-decoration: none;
+}
+
+li {
+  display: grid;
+  grid-template-columns: 2fr;
+  place-items: center;
+  font-size: 4rem;
+}
+
+section .container {
+  display: grid;
+  grid-template-columns: 2fr;
+}
+
 span svg {
-  width: 0.75rem;
+  width: 3rem;
 }
 
 p {
   padding: 1rem;
+  display: grid;
+  grid-template-columns: 2fr;
 }
