--- a/style.css
+++ b/style.css
@@ -63,10 +63,10 @@ select {
 
 html {
   --primary-light: #99f3bd;
-  --primary-dark: ;
+  --primary-dark: ; #100007;
   --secondary-light: #f6f6f6;
-  --secondary-dark: ;
-  font-family: "Open Sans", sans-serif;
+  --secondary-dark: #8FA6CB;
+ font-family: "Open Sans", sans-serif;
 }
 body {
   margin: 5%;
@@ -138,3 +138,18 @@ p {
   display: grid;
   grid-template-columns: 2fr;
 }
+
+article section {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  padding-top: 5vh;
+  padding-bottom: 5vh; }
+
+  article .container,
+.page-footer .container,
+#styles .container {
+  width: 100%;
+  max-width: 80ch;
+  margin-right: 5px;
+  margin-left: 5px; }
