--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ select {
 /*font-family: 'Kufam', cursive;*/
 
 html {
-  --primary-light: #B8E1FF;
+  --primary-light: #F4796B;
   --primary-dark: ; #090809;
   --secondary-light: #f6f6f6;
   --secondary-dark: #8FA6CB;
@@ -88,13 +88,103 @@ header .container {
   place-items: center;
   font-size: 5rem;
   text-decoration: none;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 80em;
+}
+
+#container {
+  display: flex;
+  flex-direction: column;
+  float: left;
+  justify-content: center;
+  min-height: 100vh;
+  padding: 1em;
+  width: 100%;
+}
+
+h1 {
+  animation: text-shadow 1.5s ease-in-out infinite;
+  font-size: 4em;
+  font-weight: 900;
+  line-height: 1;
+}
+
+h2 {
+  margin: 20%;
+}
+
+h1:hover {
+  animation-play-state: paused;
+}
+
+a {
+  color: #024794;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+@keyframes text-shadow {
+  0% {  
+      transform: translateY(0);
+      text-shadow: 
+          0 0 0 #0c2ffb, 
+          0 0 0 #2cfcfd, 
+          0 0 0 #fb203b, 
+          0 0 0 #fefc4b;
+  }
+
+  20% {  
+      transform: translateY(-1em);
+      text-shadow: 
+          0 0.125em 0 #0c2ffb, 
+          0 0.25em 0 #2cfcfd, 
+          0 -0.125em 0 #fb203b, 
+          0 -0.25em 0 #fefc4b;
+  }
+
+  40% {  
+      transform: translateY(0.5em);
+      text-shadow: 
+          0 -0.0625em 0 #0c2ffb, 
+          0 -0.125em 0 #2cfcfd, 
+          0 0.0625em 0 #fb203b, 
+          0 0.125em 0 #fefc4b;
+  }
+  
+ 60% {
+      transform: translateY(-0.25em);
+      text-shadow: 
+          0 0.03125em 0 #0c2ffb, 
+          0 0.0625em 0 #2cfcfd, 
+          0 -0.03125em 0 #fb203b, 
+          0 -0.0625em 0 #fefc4b;
+  }
+
+  80% {  
+      transform: translateY(0);
+      text-shadow: 
+          0 0 0 #0c2ffb, 
+          0 0 0 #2cfcfd, 
+          0 0 0 #fb203b, 
+          0 0 0 #fefc4b;
+  }
+}
+
+@media (prefers-reduced-motion: reduce) {
+  * {
+    animation: none !important;
+    transition: none !important;
+  }
 }
 
 nav ul {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin: 10;
+  margin: 10%;
   padding: 3;
   list-style: none;
 }
@@ -102,9 +192,10 @@ nav ul {
 nav ul a {
   display: inline-grid;
   padding: 0.5rem;
-  color: var(--secondary-dark);
+  color: var(--secondary-light);
   font-size: 2rem;
   text-decoration: none;
+  
 }
 
 li {
@@ -120,6 +211,10 @@ section .container {
 }
 
 span svg {
+  width: 3rem;
+}
+
+path svg {
   width: 3rem;
 }
 
